# phylo_gnn

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
configs/: example_config.yaml
notebooks/: rescale_factor_analysis.ipynb
phylo_gnn/: __init__.py  ete3_utils.py
phylo_gnn/config/: __init__.py  _config.py  _default_functions.py  experiment_configs.py
phylo_gnn/data/: __init__.py  _csv_metadata.py  _folder_metadata.py  _phylo_dataset.py  _utils.py  _vector_tree.py
phylo_gnn/data/feature_extraction/: __init__.py  _edge_attributes.py  _edge_index_extractors.py  _edge_indices.py  _get_encoding_function.py  _get_indices_extractor.py  _get_process_function.py  _node_features.py  _normalization_functions.py  _target_processors.py  _types.py  _vector_tree.py
phylo_gnn/encoding/: _edge_attributes_extractors.py  _edge_indices_extractors.py  _factories.py  _node_feature_extractors.py  _types.py  _vector_tree.py
phylo_gnn/feature_extraction/: __init__.py  _edge_attributes_extractors.py  _edge_indices_extractors.py  _factories.py  _node_feature_extractors.py  _target_processors.py  _types.py  _vector_tree.py
phylo_gnn/model/: __init__.py  _base_encoder.py  _encoders.py  _hetero_periodic_encoder.py  _message_passing.py  _phylo_gnn.py  _phylo_gnn_classifier.py  _readouts.py  _utils.py
phylo_gnn/model/encoders/: _periodic_encoder.py
phylo_gnn/model/feature_encoders/: __init__.py  _base_encoder.py  _hetero_periodic_encoder.py
phylo_gnn/model/message_passing/: __init__.py  _base_message_passing.py  _hetero_conv.py  _hgatv2_message_passing.py
phylo_gnn/model/readouts/: __init__.py  _base_readout.py  _simple_readout.py
phylo_gnn/training/: __init__.py  _train.py  _utils.py
scripts/: train.py
scripts/data/: create_csv_dataset.py  create_test_csv.py
scripts/experiments/: access_performance.py
tests/: conftest.py
tests/data/: test_vector_tree.py
