[tool.poetry]
name = "phylo-gnn"
version = "0.1.0"
description = ""
authors = ["Pablo Ariño <pablo.arino22@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
torch-geometric = "^2.6.1"
pandas = "^2.2.3"
types-tqdm = "^4.67.0.20250319"
pandas-stubs = "^2.2.3.250308"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.pylint]
disable = [
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]