[tool.poetry]
name = "phylo-gnn"
version = "0.1.0"
description = ""
authors = ["Pablo Ariño <pablo.arino22@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
torch-geometric = "^2.6.1"
pandas = "^2.2.3"
types-tqdm = "^4.67.0.20250319"
pandas-stubs = "^2.2.3.250308"
ete3 = "^3.1.3"
wandb = "^0.19.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pylint = "^3.3.6"


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.pylint]
disable = [
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]